force-app/main/default/objects/commissionAdjustmentDetail__c.object
<CustomObject>
    <description>Adjustment Details by Commission Period, Rep and type</description>
    <fields>
        <fullName>Adjustment_Amount__c</fullName>
        <inlineHelpText>Amount to Adjust Sales Rep for this type of Transaction</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustment_Description__c</fullName>
        <inlineHelpText>Adjustment Description</inlineHelpText>
        <label>Adjustment Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <inlineHelpText>Commission Adjustment Type</inlineHelpText>
        <label>Adjustment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Commission_Adjustments</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Employee_Attained_Value_Recor__c</fullName>
        <inlineHelpText>Attained Value Record (Rep) to apply Adjustment to.</inlineHelpText>
        <label>Commission Employee Attained Value Recor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>commissionEmployeeAttainedValue__c.Commission_Period__r.isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>commissionEmployeeAttainedValue__c</referenceTo>
        <relationshipLabel>Commission Adjustment Details</relationshipLabel>
        <relationshipName>Commission_Adjustment_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Adjustment_Id__c</fullName>
        <label>Team Adjustment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Commission Type</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gross Profit</fullName>
                </value>
                <value>
                    <fullName>Commission Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Commission Adjustment Detail</label>
    <nameField>
        <displayFormat>Comm Adj {00000}</displayFormat>
        <label>Commission Adjustment Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Adjustment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>